Fixes bug 687562 "vector devices close output file incorrectly". Vector devices open the output file with gx_device_open_output_file, so should close it with gx_device_close_output_file, not fclose. This was preventing pswrite from correctly closing special files such as "%printer%Printer Name" on Windows and OS/2.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@5149 a1074d23-0009-0410-80fe-cf8c14f379e6